@@ -1,3 +1,5 @@
+HEAD
+	+ Fixed search domain regression after resolvconf changes
 3.2.1
 	+ Use new resolvconf framework to manage resolvers list
 	+ Fix setNameservers method in Network to avoid error in import
